--- a/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-31 13:16+0000\n"
+"POT-Creation-Date: 2021-10-27 09:03+0000\n"
 "PO-Revision-Date: 2021-05-12 08:42+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -399,7 +399,76 @@ msgstr "お使いのエクステンションはマルチモジュールプロジ
 
 #. type: delimited block -
 #: upstream/_guides/building-my-first-extension.adoc:217
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
+#| "<project xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd\" xmlns=\"http://maven.apache.org/POM/4.0.0\"\n"
+#| "    xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n"
+#| "  <modelVersion>4.0.0</modelVersion>\n"
+#| "  <groupId>org.acme</groupId>\n"
+#| "  <artifactId>greeting-extension-parent</artifactId>\n"
+#| "  <version>1.0.0-SNAPSHOT</version>\n"
+#| "  <packaging>pom</packaging>\n"
+#| "  <name>Greeting Extension - Parent</name>\n"
+#| "  <modules><!--1-->\n"
+#| "    <module>deployment</module>\n"
+#| "    <module>runtime</module>\n"
+#| "  </modules>\n"
+#| "  <properties>\n"
+#| "    <compiler-plugin.version>3.8.1</compiler-plugin.version><!--2-->\n"
+#| "    <failsafe-plugin.version>${surefire-plugin.version}</failsafe-plugin.version>\n"
+#| "    <maven.compiler.parameters>true</maven.compiler.parameters>\n"
+#| "    <maven.compiler.source>1.8</maven.compiler.source>\n"
+#| "    <maven.compiler.target>1.8</maven.compiler.target>\n"
+#| "    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>\n"
+#| "    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>\n"
+#| "    <quarkus.version>{quarkus-version}</quarkus.version>\n"
+#| "    <surefire-plugin.version>2.22.2</surefire-plugin.version>\n"
+#| "  </properties>\n"
+#| "  <dependencyManagement>\n"
+#| "    <dependencies>\n"
+#| "      <dependency><!--3-->\n"
+#| "        <groupId>io.quarkus</groupId>\n"
+#| "        <artifactId>quarkus-bom</artifactId>\n"
+#| "        <version>${quarkus.version}</version>\n"
+#| "        <type>pom</type>\n"
+#| "        <scope>import</scope>\n"
+#| "      </dependency>\n"
+#| "    </dependencies>\n"
+#| "  </dependencyManagement>\n"
+#| "  <build>\n"
+#| "    <pluginManagement>\n"
+#| "      <plugins>\n"
+#| "        <plugin><!--4-->\n"
+#| "          <artifactId>maven-surefire-plugin</artifactId>\n"
+#| "          <version>${surefire-plugin.version}</version>\n"
+#| "          <configuration>\n"
+#| "            <systemPropertyVariables>\n"
+#| "              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>\n"
+#| "              <maven.home>${maven.home}</maven.home>\n"
+#| "              <maven.repo>${settings.localRepository}</maven.repo>\n"
+#| "            </systemPropertyVariables>\n"
+#| "          </configuration>\n"
+#| "        </plugin>\n"
+#| "        <plugin><!--4-->\n"
+#| "          <artifactId>maven-failsafe-plugin</artifactId>\n"
+#| "          <version>${failsafe-plugin.version}</version>\n"
+#| "          <configuration>\n"
+#| "            <systemPropertyVariables>\n"
+#| "              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>\n"
+#| "              <maven.home>${maven.home}</maven.home>\n"
+#| "              <maven.repo>${settings.localRepository}</maven.repo>\n"
+#| "            </systemPropertyVariables>\n"
+#| "          </configuration>\n"
+#| "        </plugin>\n"
+#| "        <plugin>\n"
+#| "          <artifactId>maven-compiler-plugin</artifactId>\n"
+#| "          <version>${compiler-plugin.version}</version>\n"
+#| "        </plugin>\n"
+#| "      </plugins>\n"
+#| "    </pluginManagement>\n"
+#| "  </build>\n"
+#| "</project>\n"
 msgid ""
 "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
 "<project xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd\" xmlns=\"http://maven.apache.org/POM/4.0.0\"\n"
@@ -418,8 +487,8 @@ msgid ""
 "    <compiler-plugin.version>3.8.1</compiler-plugin.version><!--2-->\n"
 "    <failsafe-plugin.version>${surefire-plugin.version}</failsafe-plugin.version>\n"
 "    <maven.compiler.parameters>true</maven.compiler.parameters>\n"
-"    <maven.compiler.source>1.8</maven.compiler.source>\n"
-"    <maven.compiler.target>1.8</maven.compiler.target>\n"
+"    <maven.compiler.source>11</maven.compiler.source>\n"
+"    <maven.compiler.target>11</maven.compiler.target>\n"
 "    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>\n"
 "    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>\n"
 "    <quarkus.version>{quarkus-version}</quarkus.version>\n"
