--- a/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-10-06 08:09+0000\n"
+"POT-Creation-Date: 2021-10-27 09:04+0000\n"
 "PO-Revision-Date: 2021-07-30 17:18+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -502,9 +502,9 @@ msgstr "開発モードで使用するコンパイラ・フラグをカスタマ
 #, no-wrap
 msgid ""
 "<plugin>\n"
-"  <groupId>io.quarkus</groupId>\n"
+"  <groupId>${quarkus.platform.group-id}</groupId>\n"
 "  <artifactId>quarkus-maven-plugin</artifactId>\n"
-"  <version>${quarkus-plugin.version}</version>\n"
+"  <version>${quarkus.platform.version}</version>\n"
 msgstr ""
 
 #. type: delimited block -
@@ -855,7 +855,7 @@ msgid ""
 "<dependencyManagement>\n"
 "    <dependencies>\n"
 "        <dependency> <1>\n"
-"            <groupId>io.quarkus.platform</groupId>\n"
+"            <groupId>${quarkus.platform.group-id}</groupId>\n"
 "            <artifactId>quarkus-bom</artifactId>\n"
 "            <version>${quarkus.platform.version}</version>\n"
 "            <type>pom</type>\n"
@@ -872,7 +872,7 @@ msgid ""
 "<build>\n"
 "    <plugins>\n"
 "        <plugin> <2>\n"
-"            <groupId>io.quarkus.platform</groupId>\n"
+"            <groupId>${quarkus.platform.group-id}</groupId>\n"
 "            <artifactId>quarkus-maven-plugin</artifactId>\n"
 "            <version>${quarkus.platform.version}</version>\n"
 "            <extensions>true</extensions> <3>\n"
@@ -1150,9 +1150,9 @@ msgid ""
 "    <plugins>\n"
 "      ...\n"
 "      <plugin>\n"
-"        <groupId>io.quarkus</groupId>\n"
+"        <groupId>${quarkus.platform.group-id}</groupId>\n"
 "        <artifactId>quarkus-maven-plugin</artifactId>\n"
-"        <version>${quarkus-plugin.version}</version>\n"
+"        <version>${quarkus.platform.version}</version>\n"
 "        <extensions>true</extensions>\n"
 "        <configuration>\n"
 "          <systemProperties>\n"
@@ -1192,9 +1192,9 @@ msgid ""
 "    <plugins>\n"
 "      ...\n"
 "      <plugin>\n"
-"        <groupId>io.quarkus</groupId>\n"
+"        <groupId>${quarkus.platform.group-id}</groupId>\n"
 "        <artifactId>quarkus-maven-plugin</artifactId>\n"
-"        <version>${quarkus-plugin.version}</version>\n"
+"        <version>${quarkus.platform.version}</version>\n"
 "        <extensions>true</extensions>\n"
 "        <configuration>\n"
 "          <properties>\n"
@@ -1271,9 +1271,9 @@ msgid ""
 "    <plugins>\n"
 "      ...\n"
 "      <plugin>\n"
-"        <groupId>io.quarkus</groupId>\n"
+"        <groupId>${quarkus.platform.group-id}</groupId>\n"
 "        <artifactId>quarkus-maven-plugin</artifactId>\n"
-"        <version>${quarkus-plugin.version}</version>\n"
+"        <version>${quarkus.platform.version}</version>\n"
 "        <extensions>true</extensions>\n"
 "        <executions>\n"
 "          <execution>\n"
@@ -1366,9 +1366,9 @@ msgid ""
 "    <plugins>\n"
 "      ...\n"
 "      <plugin>\n"
-"        <groupId>io.quarkus</groupId>\n"
+"        <groupId>${quarkus.platform.group-id}</groupId>\n"
 "        <artifactId>quarkus-maven-plugin</artifactId>\n"
-"        <version>${quarkus-plugin.version}</version>\n"
+"        <version>${quarkus.platform.version}</version>\n"
 "        <extensions>true</extensions>\n"
 "        <executions>\n"
 "          ...\n"
