--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kafka-streams.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-30 15:09+0000\n"
+"POT-Creation-Date: 2021-10-27 09:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -105,6 +105,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:343
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:352
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:361
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:370
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -465,7 +466,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Store type\n"
+"Trust store type\n"
 "--"
 msgstr ""
 
@@ -477,7 +478,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Store location\n"
+"Trust store location\n"
 "--"
 msgstr ""
 
@@ -489,7 +490,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Store password\n"
+"Trust store password\n"
 "--"
 msgstr ""
 
@@ -497,11 +498,11 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:279
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`\n"
+"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.truststore.certificates]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.truststore.certificates[quarkus.kafka-streams.ssl.truststore.certificates]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store type\n"
+"Trust store certificates\n"
 "--"
 msgstr ""
 
@@ -509,11 +510,11 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:288
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`\n"
+"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store location\n"
+"Key store type\n"
 "--"
 msgstr ""
 
@@ -521,11 +522,11 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:297
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`\n"
+"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store password\n"
+"Key store location\n"
 "--"
 msgstr ""
 
@@ -533,11 +534,11 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:306
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.type]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.type[quarkus.kafka-streams.ssl.key.type]`\n"
+"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store type\n"
+"Key store password\n"
 "--"
 msgstr ""
 
@@ -545,11 +546,11 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:315
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.location]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.location[quarkus.kafka-streams.ssl.key.location]`\n"
+"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.key]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.key[quarkus.kafka-streams.ssl.keystore.key]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store location\n"
+"Key store private key\n"
 "--"
 msgstr ""
 
@@ -557,16 +558,28 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:324
 #, no-wrap
 msgid ""
-"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.password]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.password[quarkus.kafka-streams.ssl.key.password]`\n"
+"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.certificate-chain]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.certificate-chain[quarkus.kafka-streams.ssl.keystore.certificate-chain]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Store password\n"
+"Key store certificate chain\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:333
+#, no-wrap
+msgid ""
+"[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.password]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.password[quarkus.kafka-streams.ssl.key.password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Password of the private key in the key store\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:342
 #, no-wrap
 msgid ""
 "[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keymanager-algorithm]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keymanager-algorithm[quarkus.kafka-streams.ssl.keymanager-algorithm]`\n"
@@ -578,7 +591,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:342
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:351
 #, no-wrap
 msgid ""
 "[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.trustmanager-algorithm]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.trustmanager-algorithm[quarkus.kafka-streams.ssl.trustmanager-algorithm]`\n"
@@ -590,7 +603,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:351
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:360
 #, no-wrap
 msgid ""
 "[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.endpoint-identification-algorithm]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.endpoint-identification-algorithm[quarkus.kafka-streams.ssl.endpoint-identification-algorithm]`\n"
@@ -602,13 +615,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:355
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:364
 #, no-wrap
 msgid "`https`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:360
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:369
 #, no-wrap
 msgid ""
 "[[quarkus-kafka-streams_quarkus.kafka-streams.ssl.secure-random-implementation]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.secure-random-implementation[quarkus.kafka-streams.ssl.secure-random-implementation]`\n"
@@ -620,17 +633,17 @@ msgid ""
 msgstr ""
 
 #. type: Block title
-#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:367
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:376
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:371
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:380
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:375
+#: upstream/_generated-config/latest/config/quarkus-kafka-streams.adoc:384
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
