--- a/l10n/po/ja_JP/_guides/config-yaml.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-yaml.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-20 07:10+0000\n"
+"POT-Creation-Date: 2021-10-27 09:03+0000\n"
 "PO-Revision-Date: 2021-07-19 12:48+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -113,13 +113,19 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/config-yaml.adoc:62
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "# REST Client configuration property\n"
+#| "org:\n"
+#| "  acme:\n"
+#| "    restclient:\n"
+#| "      CountriesService/mp-rest/url: https://restcountries.eu/rest\n"
 msgid ""
 "# REST Client configuration property\n"
-"org:\n"
-"  acme:\n"
-"    restclient:\n"
-"      CountriesService/mp-rest/url: https://restcountries.eu/rest\n"
+"quarkus:\n"
+"  rest-client:\n"
+"    org.acme.restclient.CountriesService:\n"
+"      url: https://restcountries.eu/rest\n"
 msgstr ""
 "# REST Client configuration property\n"
 "org:\n"
