Update .po files

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-10-20 12:11+0000\n"
+"POT-Creation-Date: 2021-10-27 11:09+0000\n"
 "PO-Revision-Date: 2021-10-20 17:58+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1028,6 +1028,26 @@ msgstr "/guides/mongodb"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Schema Migration with Liquibase"
+msgid "Manage your MongoDB schema migrations with Liquibase."
+msgstr "Liquibase を使ったスキーマのマイグレーション"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, no-wrap
+msgid "Liquibase MongoDB"
+msgstr ""
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/liquibase"
+msgid "/guides/liquibase-mongodb"
+msgstr "/guides/liquibase"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
 #, no-wrap
 msgid "This guide covers the usage of MongoDB using active records and repositories."
 msgstr "このガイドでは、アクティブなレコードやリポジトリを使ったMongoDBの使い方について説明します。"
@@ -1347,6 +1367,26 @@ msgstr "/guides/amqp"
 #. type: Hash Value - Key: description
 #: >categories>>guides>
 #, no-wrap
+msgid "Reference guide for SmallRye Reactive Messaging and AMQP."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "CDI Reference"
+msgid "AMQP Reference"
+msgstr "CDIリファレンス"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/http-reference"
+msgid "/guides/amqp-reference"
+msgstr "/guides/http-reference"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
 msgid "Start AMQP automatically in dev and test modes."
 msgstr ""
 
@@ -1488,6 +1528,86 @@ msgstr "セキュリティの概要"
 #, no-wrap
 msgid "/guides/security"
 msgstr "/guides/security"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "Secure your web endpoints with authorizations."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, no-wrap
+msgid "Authorization of Web Endpoints"
+msgstr ""
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/security-keycloak-authorization"
+msgid "/guides/security-authorization"
+msgstr "/guides/security-keycloak-authorization"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Learn more about how to configure your Quarkus applications."
+msgid "Learn more about how Quarkus handles authentication."
+msgstr "Quarkusアプリケーションを設定する為の詳細について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, no-wrap
+msgid "Built-In Authentication Support"
+msgstr ""
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/security-openid-connect-web-authentication"
+msgid "/guides/security-built-in-authentication"
+msgstr "/guides/security-openid-connect-web-authentication"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "Customize Quarkus' security layer behavior."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Serialization"
+msgid "Security Customization"
+msgstr "シリアル化"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/security-keycloak-authorization"
+msgid "/guides/security-customization"
+msgstr "/guides/security-keycloak-authorization"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Learn more about how to configure your Quarkus applications."
+msgid "Test the security of your Quarkus applications."
+msgstr "Quarkusアプリケーションを設定する為の詳細について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Security Overview"
+msgid "Security Testing"
+msgstr "セキュリティの概要"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/security-jwt"
+msgid "/guides/security-testing"
+msgstr "/guides/security-jwt"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -1791,6 +1911,26 @@ msgstr "HashiCorp Vaultの認証との連携"
 #, no-wrap
 msgid "/guides/vault-auth"
 msgstr "/guides/vault-auth"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "Generate X.509 certificates with Vault’s PKI Secret Engine."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Using Vault Transit Secret Engine"
+msgid "Using HashiCorp Vault’s PKI Secret Engine"
+msgstr "ヴォールトトランジットシークレットエンジンの使用"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/vault"
+msgid "/guides/vault-pki"
+msgstr "/guides/vault"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
