--- a/l10n/po/ja_JP/_posts/2020-12-03-quarkiverse.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-12-03-quarkiverse.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-01 13:11+0000\n"
+"POT-Creation-Date: 2021-10-27 20:09+0000\n"
 "PO-Revision-Date: 2021-02-06 11:04+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -82,7 +82,9 @@ msgstr "Maven CentralへのMavenリリースの自動化された安全な配信
 
 #. type: Plain text
 #: upstream/_posts/2020-12-03-quarkiverse.adoc:28
-msgid "Registering and publishing artifacts to Maven central can become a daunting task. In Quarkiverse that is automated by GitHub Actions, requiring no manual interaction with any command line tools.  Releasing an artifact is as simple as opening a pull-request changing the https://github.com/quarkiverse/quarkiverse-template/blob/master/.github/project.yml[`.github/project.yml`] file in the extension's repository.  Once the pull-request is merged, a GitHub action is triggered invoking `mvn release:prepare release:perform` and the extension is deployed to Maven central."
+#, fuzzy
+#| msgid "Registering and publishing artifacts to Maven central can become a daunting task. In Quarkiverse that is automated by GitHub Actions, requiring no manual interaction with any command line tools.  Releasing an artifact is as simple as opening a pull-request changing the https://github.com/quarkiverse/quarkiverse-template/blob/master/.github/project.yml[`.github/project.yml`] file in the extension's repository.  Once the pull-request is merged, a GitHub action is triggered invoking `mvn release:prepare release:perform` and the extension is deployed to Maven central."
+msgid "Registering and publishing artifacts to Maven central can become a daunting task. In Quarkiverse that is automated by GitHub Actions, requiring no manual interaction with any command line tools.  Releasing an artifact is as simple as opening a pull-request changing the https://github.com/quarkiverse/quarkiverse-template/blob/main/.github/project.yml[`.github/project.yml`] file in the extension's repository.  Once the pull-request is merged, a GitHub action is triggered invoking `mvn release:prepare release:perform` and the extension is deployed to Maven central."
 msgstr "Maven centralに成果物を登録して公開するのは、大変な作業になることがあります。Quarkiverseでは、GitHub Actionsによって自動化されており、コマンドラインツールを使って手動で操作する必要はありません。アーティファクトのリリースは、プルリクエストを開いて  https://github.com/quarkiverse/quarkiverse-template/blob/master/.github/project.yml[.github/project.yml]ファイルを作成します。プルリクエストがマージされると、GitHub アクションがトリガーされて `mvn release:prepare release:perform` が呼び出され、エクステンションが Maven セントラルにデプロイされます。"
 
 #. type: Target for macro image
