--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute-qute-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute-qute-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-10-28 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -84,7 +84,39 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:41
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:43
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-qute-qute-config_quarkus.qute.template-path-exclude]]`link:#quarkus-qute-qute-config_quarkus.qute.template-path-exclude[quarkus.qute.template-path-exclude]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"This regular expression is used to exclude template files from the `templates` directory. Excluded templates are neither parsed nor validated during build and are not available at runtime. \n"
+" The matched input is the file path relative from the `templates` directory and the `/` is used as a path separator. \n"
+" By default, the hidden files are excluded. The name of a hidden file starts with a dot.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:45
+#, no-wrap
+msgid "link:https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html[Pattern]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:45
+#, no-wrap
+msgid "`^\\..*\\"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:48
+#, no-wrap
+msgid ".*\\/\\..*$`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:53
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-qute-qute-config_quarkus.qute.content-types-content-types]]`link:#quarkus-qute-qute-config_quarkus.qute.content-types-content-types[quarkus.qute.content-types]`\n"
@@ -96,7 +128,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:42
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:54
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
