--- a/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-10-28 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -417,7 +417,7 @@ msgstr "Keycloak サーバーを起動するにはDockerを使用し、以下の
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:201
 #, no-wrap
-msgid "docker run --name keycloak -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin -p 8180:8080 -p 8543:8443 {keycloak-docker-image}\n"
+msgid "docker run --name keycloak -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin -p 8180:8080 -p 8543:8443 quay.io/keycloak/keycloak:{keycloak version}\n"
 msgstr ""
 
 #. type: Plain text
