Translate getting-started-reactive.adoc.po (WIP)

--- a/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
@@ -7,77 +7,67 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-07-29 10:11+0000\n"
-"PO-Revision-Date: 2021-04-03 10:17+0900\n"
+"PO-Revision-Date: 2021-10-26 16:43+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/getting-started-reactive.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 #| msgid "Quarkus - Getting started with Reactive"
 msgid "Getting Started With Reactive"
-msgstr "Quarkus - リアクティブを始める"
+msgstr "リアクティブ入門"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:12
-#, fuzzy
 msgid "_Reactive_ is a set of principles to build robust, efficient, and concurrent applications and systems.  These principles let you handle more load than traditional approaches while using the resources (CPU and memory) more efficiently while also reacting to failures gracefully."
-msgstr "_リアクティブ_とは、堅牢で効率的、かつコンカレントなアプリケーションやシステムを構築するための一連の原則です。これらの原則により、従来のアプローチよりも多くの負荷を処理しながら、リソース（CPUやメモリ）をより効率的に使用し、また障害にも優雅に対応することができます。"
+msgstr "_リアクティブ_ とは、堅牢で効率的、かつコンカレントなアプリケーションやシステムを構築するための一連の原則です。これらの原則により、従来のアプローチよりも多くの負荷を処理しながら、リソース（CPUやメモリ）をより効率的に使用し、また障害にも適切に対応することができます。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:16
-#, fuzzy
 msgid "Quarkus is a _Reactive_ framework.  Since the beginning, _Reactive_ has been an essential tenet of the Quarkus architecture.  It includes many reactive features and offers a broad ecosystem."
-msgstr "Quarkusは _Reactive_フレームワークです。設立当初から、 _Reactive_はQuarkusのアーキテクチャに欠かせない要素でした。多くのReactive機能が含まれており、幅広いエコシステムを提供しています。"
+msgstr "Quarkusは _Reactive_ フレームワークです。当初から、 _Reactive_はQuarkusのアーキテクチャに欠かせない要素でした。多くのReactive機能が含まれており、幅広いエコシステムを提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:19
-#, fuzzy
 msgid "This guide is not an in-depth article about what _Reactive_ is and how Quarkus enables reactive architectures.  If you want to read more about these topics, refer to the xref:quarkus-reactive-architecture.adoc[Reactive Architecture guide], which provides an overview of the Quarkus reactive ecosystem."
-msgstr "このガイドは、 _リアクティブ_とは何か、Quarkusでどのようにリアクティブアーキテクチャを実現するかについての詳細な記事ではありません。これらのトピックについて詳しく知りたい場合は、Quarkusのリアクティブエコシステムの概要を説明した「 link:quarkus-reactive-architecture.html[Reactive Architecture」ガイド]を参照してください。"
+msgstr "このガイドは、 _リアクティブ_ とは何か、Quarkusでどのようにリアクティブアーキテクチャを実現するかについての詳細な記事ではありません。これらのトピックについて詳しく知りたい場合は、Quarkusのリアクティブエコシステムの概要を説明した xref:quarkus-reactive-architecture.adoc[リアクティブアーキテクチャガイド] を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:23
-#, fuzzy
 msgid "In this guide, we will get you started with some reactive features of Quarkus.  We are going to implement a simple CRUD application.  Yet, unlike in the xref:hibernate-orm-panache.adoc[Hibernate with Panache guide], it uses the reactive features of Quarkus."
-msgstr "このガイドでは、Quarkusのリアクティブな機能をご紹介します。簡単なCRUDアプリケーションを実装する予定です。ただし、 link:hibernate-orm-panache.html[Hibernate with Panacheのガイド]とは異なり、Quarkusのリアクティブ機能を使用します。"
+msgstr "このガイドでは、Quarkusのリアクティブな機能をご紹介します。簡単なCRUDアプリケーションを実装する予定です。ただし、 xref:hibernate-orm-panache.adoc[Hibernate with Panacheガイド] とは異なり、Quarkusのリアクティブ機能を使用します。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:25
-#, fuzzy
 msgid "This guide will help you with:"
-msgstr "このガイドでは、以下のことができます。"
+msgstr "このガイドでは、次の情報を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:27
-#, fuzzy
-#| msgid "The bootstrap of a reactive application using RESTEasy Reactive"
 msgid "Bootstrapping a reactive CRUD application with Quarkus"
-msgstr "RESTEasy Reactiveを使ったリアクティブアプリケーションのブートストラップ"
+msgstr "RESTEasy Reactiveを使ったリアクティブCRUDアプリケーションのブートストラップ"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:28
-#, fuzzy
 msgid "Using Hibernate Reactive with Panache to interact with a database in a reactive fashion"
-msgstr "Panacheを使ったHibernate Reactiveによるリアクティブなデータベースとの連携"
+msgstr "Hibernate Reactive with Panacheによるリアクティブなデータベースとの連携"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:29
-#, fuzzy
 msgid "Using RESTEasy Reactive to implement HTTP API while enforcing the reactive principle"
-msgstr "RESTEasy Reactiveを使用して、反応性の原則を実行しながらHTTP APIを実装する"
+msgstr "RESTEasy Reactiveを使用して、リアクティブの原則を実行しながらHTTP APIを実装"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:30
-#, fuzzy
 msgid "Packaging and Running the application"
 msgstr "アプリケーションのパッケージ化と実行"
 
@@ -94,23 +84,18 @@ msgstr "このガイドを完成させるには、以下が必要です："
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:36
-#, fuzzy
-#| msgid "less than 15 minutes"
 msgid "around 15 minutes"
-msgstr "15分未満"
+msgstr "15分程度"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:37
-#, fuzzy
 msgid "your favorite IDE"
-msgstr "あなたのお気に入りのIDE"
+msgstr "お好みのIDE"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:38
-#, fuzzy
-#| msgid "JDK 8 or 11+ installed with `JAVA_HOME` configured appropriately"
 msgid "Java 11+ installed with `JAVA_HOME` configured appropriately."
-msgstr "JDK 8 または 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-reactive.adoc:39
@@ -149,9 +134,9 @@ msgstr "伝統的で命令的なアプローチでは、フレームワークは
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_guides/getting-started-reactive.adoc:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Imperative"
-msgstr "命令形"
+msgstr "命令型"
 
 #. type: Target for macro image
 #: upstream/_guides/getting-started-reactive.adoc:59
@@ -167,9 +152,9 @@ msgstr "一方、リアクティブモデルは、ノンブロッキングI/Oと
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_guides/getting-started-reactive.adoc:68
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Reactive"
-msgstr "リアクティブ"
+msgstr "リアクティブ型"
 
 #. type: Target for macro image
 #: upstream/_guides/getting-started-reactive.adoc:68
